--- a/src/components/SidebarGestor.css
+++ b/src/components/SidebarGestor.css
@@ -2,7 +2,7 @@
   width: 270px;
   background-color: #ffffff;
   color: #333;
-  min-height: 100vh;
+  
   border-right: 1px solid #ddd;
   position: fixed;
   top: 0;
@@ -14,6 +14,9 @@
   pointer-events: auto;
   align-items: center;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  height: 100vh;      
+  
+  
 }
 
 .sidebar-gestor-box.collapsed {
@@ -23,6 +26,7 @@
   transform: translateX(-100%);
   opacity: 0;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .sidebar-gestor-toggle-btn {
@@ -78,14 +82,18 @@
 .sidebar-gestor-rol::after {
   content: "";
   display: block;
-  width: 50%;
-  height: 2px;
-  background-color: #2e9e7f;
+  width: 70%; 
+  height: 3px;
+  background-color: #EFB036; 
   margin: 10px auto;
 }
 
 .sidebar-gestor-nav {
   width: 100%;
+  flex: 1;                
+  overflow-y: auto;       
+  overflow-x: hidden;
+  padding-bottom: 16px;
 }
 
 .sidebar-gestor-nav ul {
@@ -94,9 +102,10 @@
 }
 
 .sidebar-gestor-menu-item {
-  margin-bottom: 15px;
-  padding: 10px 0;
+  margin-bottom: 6px; 
+  padding: 6px 0;    
 }
+
 
 .sidebar-gestor-menu-title {
   background-color: #f1f5f9;
